
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int deathbuf ;


 unsigned short htons (int) ;
 int memset (char*,char,int) ;
 int write (int,...) ;

int
main(int argc, const char* argv[])
{
  char deathbuf[1000];
  unsigned short s;
  unsigned char c;

  memset(deathbuf, 'A', sizeof(deathbuf));



  s = htons(1);
  write(1, &s, 2);

  s = htons(4);
  write(1, &s, 2);

  s = htons(1 + 2 + 1000 + 2);
  write(1, &s, 2);
  s = htons(sizeof(deathbuf));
  write(1, &s, 2);
  write(1, deathbuf, sizeof(deathbuf));

  s = htons(0);
  write(1, &s, 2);

  c = 0;
  write(1, &c, 1);
}
